# lambda-n-ways

./: .gitignore  .hlint.yaml  BoundDB.lhs  CHANGELOG.md  CONTRIBUTING.md  DeBruijn.lhs  DeBruijnC.lhs  DeBruijnPar.lhs  DeBruijnParB.lhs  DeBruijnParF.lhs  DeBruijnScoped.lhs  HOAS.lhs  IdInt.lhs  LC.prof  LC.prof.1  LC.prof.ParDB  LC.prof.old  Lambda-Calculus-Quickly.md  Lambda.lhs  Main.lhs  Makefile  Misc.lhs  README.md  Simple.lhs  SimpleB.lhs  Subst.lhs  SubstScoped.lhs  Unbound.lhs  Unique.lhs  aeq_bench.html  bench-lam.html  bench.html  bencheval.sh  bird2code.awk  bug.lam  cabal.project  conv_bench.html  hie.yaml  ifl-2021.pptx  lambda-n-ways.cabal  (+13 more)
Core/: Core.hs  CoreFVs.hs  Nf.hs  UniqFM.hs  Unique.hs  VarEnv.hs
IdInt/: Map.hs
analysis/: Analysis.hs
bench/: #Main.lhs#  Main.lhs  QuickBench.hs
doc/: Conclusion.md  Implementations.md  Lambda-Calculus-Quickly.md  Part1.md  Part2.md  Part3.md  Part4.md  Part5.md  ifl-2021.pptx  intro.md  love-2021.pptx  plclub-2021.pptx  talk-abstract.md  wits-abstract.tex  wits-discussion.pptx  wits-short-abstract.md
lambs/: fact5b.lam  lennartb.eval.lam  lennartb.lam  lennartb4.eval.lam  lennartb4.lam  lennartb5.eval.lam  lennartb5.lam  lennartchurch.eval.lam  lennartchurch.lam
lams/: adjust.lam  adjust.nf.lam  adjustb.lam  adjustb.nf.lam  capture10.lam  capture10.nf.lam  constructed.lam  constructed10.eval.lam  constructed10.lam  constructed10.nf.lam  constructed20.eval.lam  constructed20.lam  constructed20.nf.lam  fact5.lam  fact5b.eval.lam  foursubst.lam  foursubst.nf.lam  full-2.lam  full-2.nf.lam  full.eval.lam  full.lam  id.lam  id.nf.lam  lams100.lam  lams100.nf.lam  lazy.eval.lam  lazy.lam  lazy.nf.lam  lennart.eval.lam  lennart.lam  lennart.nf.lam  lennartchurch.lam  onesubst.lam  onesubst.nf.lam  random.lam  random.nf.lam  random15.lam  random15.nf.lam  random16.lam  random16.nf.lam  (+43 more)
lib/: DeBruijn.lhs  DeBruijnPar.lhs  DeBruijnParB.lhs  DeBruijnParF.lhs  DeBruijnParFB.lhs  DeBruijnParL.lhs  DeBruijnScoped.lhs  IdInt.hs  IdInt.lhs  Impl.lhs  Imports.hs  Kit.hs  Lambda.lhs  LocallyNameless.lhs  Misc.lhs  NominalG.lhs  Perm.hs  QuickBench.hs  Simple.lhs  SimpleB.lhs  Subst.lhs  SubstScoped.lhs  Suite.hs  Unbound.lhs  UnboundGenerics.lhs  Unique.lhs
lib/Abstract/: Class.hs  ClassRevised.hs  DeBruijn.hs  DeBruijnPar.hs  Unique.hs
lib/Abstract/DeBruijnPar/: B.hs  F.hs
lib/Auto/: Bind.hs  Env.hs  Scoped.hs  Subst.hs
lib/Core/: Core.hs  CoreFVs.hs  FV.hs  Nf.hs  Subst.hs  UniqDFM.hs  UniqFM.hs  UniqSet.hs  Unique.hs  VarEnv.hs  VarSet.hs
lib/DeBruijn/: Bound.hs  Bound.lhs  BoundNonGeneric.hs  CPDT.hs  Chlipala.hs  Cornell.hs  Cornell.lhs  Kit.hs  Kovacs.hs  KovacsScoped.hs  Krivine.hs  KrivineScoped.hs  Lennart.lhs  Lift.lhs  List.lhs  Nested.hs  Nested2.hs  README.md  TAPL.hs
lib/DeBruijnPar/: B.lhs  F.lhs  FB.lhs  L.lhs  P.lhs  Scoped.lhs  ScopedImpl.lhs  Subst.lhs  SubstScoped.lhs
lib/IdInt/: Map.hs  Set.hs
lib/Impl/: BoundDB.lhs  DeBruijn.lhs  DeBruijnC.lhs  HOAS.lhs  Kit.hs  LocallyNameless.hs  LocallyNamelessOpt.hs  LocallyNamelessPar.hs  LocallyNamelessTyped.hs  LocallyNamelessV2.hs  LocallyNamelessV3.hs  NominalB.lhs  NominalG.lhs  Simple.lhs  SimpleB.hs  SimpleB.lhs  SimpleH.hs  SimpleM.hs  Unbound.hs  Unbound.lhs  UnboundGenerics.lhs  Unique.lhs
lib/Kmett/: IndicesAndLevels.hs  Type.hs
lib/Lennart/: DeBruijn.lhs  DeBruijnC.hs  HOAS.lhs  Simple.hs  Simple.lhs  SimpleOrig.hs  Unique.lhs
lib/LocallyNameless/: GenericInstOpt.hs  GenericOpt.hs  Opt.hs  Ott.hs  Par.hs  ParOpt.hs  ParScoped.hs  SupportInstOpt.hs  SupportOpt.hs  Typed.hs  TypedOpt.hs  TypedOtt.hs  UGEBind.hs  UGEBind.lhs  UGSubstBind.hs  UGSubstBind.lhs  UGSubstEBind.hs  UGSubstEBind.lhs  UNGSubstBind.hs  UNGSubstEBind.hs  Unbound.hs  UnboundGenerics.hs  UnboundGenerics.lhs  UnboundNonGenerics.hs  UnboundRep.hs
lib/NBE/: Aelig.hs  AeligScoped.hs  Boesflug.hs  Contextual.hs  Felgenhauer.hs  Interp.hs  Kovacs.hs  KovacsNamed.hs  KovacsScoped.hs  KovacsScoped2.hs
lib/Named/: Foil.hs  FreeFoil.hs  Kovacs.hs  Lennart.hs  Nom.hs  Nominal.hs  NominalB.lhs  NominalG.lhs  Simple.hs  SimpleB.hs  SimpleGH.hs  SimpleH.hs  SimpleM.hs  Unique.lhs
lib/Support/: Nat.hs  README.md  SubstH.hs  SubstOpt.hs  SubstOptPat.hs  SubstOptRefactor.hs  TypedSubstOpt.hs  Vec.hs
lib/Unbound/: UGEBind.hs  UGSubstBind.hs  UGSubstEBind.hs  UNGSubstBind.hs  UNGSubstEBind.hs  UnboundGenerics.hs  UnboundNonGenerics.hs  UnboundRep.hs
lib/Util/: DeBruijn.hs  Id.hs  IdInt.hs  Impl.hs  Imports.hs  Lambda.hs  Misc.hs  Nat.hs  Perm.hs  ScopedDeBruijn.hs  Stats.hs  Vec.hs
lib/old/: BoundNonGeneric.hs  DeBruijnC.lhs  LambdaImpl.lhs  Lazy.List.lhs  Lazy.Par.FB.hs  Lazy.TypedOpt.hs  LocallyNameless.hs  Nested2.hs  Nom.hs  Nominal.hs  SimpleB.hs  TypedOpt.hs
results/: aeq_bench.html  capt_bench.html  con_bench.html  conv_bench.html  nf_bench.html  output.txt  rand_bench.html
results/DeBruijn/: Bound-aeq.csv  Bound-con.csv  Bound-conv.csv  Bound-nf.csv  Bound-rand.csv
results/constructed/: ids_bench.html
results/huntsman-ve703-07129.apn.wlan.private.upenn.edu/: db_random15_bench.html  ln_random15_bench.html
results/random/: foursubst_bench.html  onesubst_bench.html  random15_bench.html  random25_bench.html  random2_bench.html  random35_bench.html  random_bench.html  threesubst_bench.html  twosubst_bench.html
results/sixteen.local/: db_lazy_nf_bench.html  db_lazy_random15_bench.html  db_nf_bench.html  db_random15_bench.html  fast_nf_bench.html  fast_random15_bench.html  hackage_nf_bench.html  hackage_random15_bench.html  lazy_nf_bench.html  lazy_random15_bench.html  lazy_random20_bench.html  lennart_nf_bench.html  lennart_random15_bench.html  ln_nf_bench.html  ln_opt_nf_bench.html  ln_opt_random15_bench.html  ln_random15_bench.html  ln_random20_bench.html  named_nf_bench.html  nf_bench.html  output.txt  random15_bench.html  random20_bench.html
results/zephyrus/: aeq_bench.html  aeqs_bench.html  all_nf_bench.html  all_random15_bench.html  conv_bench.html  nf_bench.html  output.txt  random15_bench.html  random20_bench.html
tests/: Main.hs
(+922 files in other folders)
