cabal-version: 1.12

name:           lambda-n-ways
version:        0.0.1
homepage:       https://github.com/sweirich/lambda-n-ways
bug-reports:    https://github.com/sweirich/lambda-n-ways
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/sweirich/lambda-n-ways

library
  hs-source-dirs: lib
  exposed-modules:
      Util.Imports
      Util.Impl
      Util.Lambda
      Util.Misc
      Suite
      Util.Id
      Util.IdInt
      QuickBench
      Util.IdInt.Map
      Util.IdInt.Set
      Support.Nat
      Support.Par.Subst
      Support.Par.SubstScoped
      DeBruijn.Cornell
      DeBruijn.CPDT
      DeBruijn.Lennart
      DeBruijn.Lift
      DeBruijn.List
      DeBruijn.Bound
      DeBruijn.Nested
--      DeBruijn.Nested2
      DeBruijn.Kit
      DeBruijn.Par.P
      DeBruijn.Par.B
      DeBruijn.Par.Fun
      DeBruijn.Par.FB
      DeBruijn.Par.L
      DeBruijn.Par.Scoped
      DeBruijn.TAPL
      DeBruijn.Lazy.Cornell
      DeBruijn.Lazy.CPDT
      DeBruijn.Lazy.Lennart
      DeBruijn.Lazy.Lift
      DeBruijn.Lazy.List
      DeBruijn.Lazy.Bound
      DeBruijn.Lazy.Nested
      -- DeBruijn.Lazy.Nested2
      DeBruijn.Lazy.TAPL
      DeBruijn.Lazy.Kit
      DeBruijn.Lazy.Par.P
      DeBruijn.Lazy.Par.B
      DeBruijn.Lazy.Par.Fun
      DeBruijn.Lazy.Par.FB
      DeBruijn.Lazy.Par.L
      DeBruijn.Lazy.Par.Scoped
      LocallyNameless.Ott
      LocallyNameless.Opt
      LocallyNameless.ParScoped
      LocallyNameless.ParOpt
      LocallyNameless.TypedOtt
      LocallyNameless.TypedOpt
      LocallyNameless.UnboundRep
      LocallyNameless.UnboundGenerics
      LocallyNameless.Lazy.Ott
      LocallyNameless.Lazy.Opt
      LocallyNameless.Lazy.ParScoped
      LocallyNameless.Lazy.ParOpt
      LocallyNameless.Lazy.TypedOtt
      LocallyNameless.Lazy.TypedOpt
      Lennart.Simple
      Lennart.Unique
      Lennart.HOAS
      -- Named.Nom  -- doesn't compile
--      Named.Nominal
      Named.NominalG
--      Named.SimpleB
      Named.SimpleH
      Named.SimpleM
      Core.Core
      Core.Unique
      Core.FV
      Core.CoreFVs
      Core.Subst
      Core.VarEnv
      Core.VarSet
      Core.UniqFM
      Core.UniqDFM
      Core.UniqSet
      Core.Nf
--      Kmett.Type
--      Kmett.IndicesAndLevels
  ghc-options:  -O2 -funfolding-use-threshold=16 -fno-warn-unticked-promoted-constructors
  build-depends:
                  base >= 4.13
                , QuickCheck >= 2.13.2
                , RepLib >= 0.5.4.2
                , bound
                , containers
                , deepseq >= 1.4.4.0
                , deriving-compat
                , mtl
                , nominal
                , nom
                , pretty
                , syb >= 0.7
                , tasty >= 1.2.3
                , tasty-hunit >= 0.10.0.2
                , tasty-quickcheck >= 0.10.1.1
                , unbound >= 0.5.1.3
--                , unbound-generics == 0.4.1
                , unbound-generics == 0.5
                , hashable
                , some >= 1.0
                , constraints >= 0.11
  default-language: Haskell2010
  default-extensions:
                  DataKinds 
                , DeriveGeneric
                , DeriveTraversable
                , EmptyCase
                , ExistentialQuantification
                , FlexibleContexts
                , FlexibleInstances
                , GADTs
                , GeneralizedNewtypeDeriving
                , InstanceSigs
                , MultiParamTypeClasses
                , PolyKinds
                , RankNTypes
                , ScopedTypeVariables
                , StandaloneDeriving
                , TupleSections
                , TypeFamilies
                , TypeApplications
                , TypeOperators
                , UndecidableInstances

executable LC
  hs-source-dirs: bench
  main-is: Main.lhs
  default-language: Haskell2010
  ghc-options:  -O2 -funfolding-use-threshold=16 -fno-warn-unticked-promoted-constructors
  build-depends: QuickCheck >= 2.13.2
               , RepLib >= 0.5.4.2
               , base >= 4.13
               , bound
               , containers
               , criterion
               , deepseq >= 1.4.4.0
               , deriving-compat
               , lambda-n-ways
               , mtl
               , pretty
               , tasty >= 1.2.3
               , tasty-hunit >= 0.10.0.2
               , tasty-quickcheck >= 0.10.1.1
               , unbound >= 0.5.1.3
  --             , unbound-generics >= 0.4.1
  default-extensions:
                  DataKinds 
                , DeriveGeneric
                , DeriveTraversable
                , EmptyCase
                , ExistentialQuantification
                , FlexibleContexts
                , FlexibleInstances
                , GADTs
                , GeneralizedNewtypeDeriving
                , InstanceSigs
                , MultiParamTypeClasses
                , PolyKinds
                , RankNTypes
                , ScopedTypeVariables
                , StandaloneDeriving
                , TupleSections
                , TypeFamilies
                , TypeApplications
                , TypeOperators
                , UndecidableInstances
                
test-suite test-timing
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: Main.hs
  type:    exitcode-stdio-1.0
  ghc-options: -O2 -fno-warn-unticked-promoted-constructors
  build-depends:
                  base >= 4.13
                , lambda-n-ways
                , QuickCheck >= 2.13.2
                , tasty >= 0.7
                , tasty >= 1.2.3
                , tasty-hunit
                , tasty-hunit >= 0.10.0.2
                , tasty-quickcheck
                , tasty-quickcheck >= 0.10.1.1
 default-extensions:
                  DataKinds 
                , DeriveGeneric
                , DeriveTraversable
                , EmptyCase
                , ExistentialQuantification
                , FlexibleContexts
                , FlexibleInstances
                , GADTs
                , GeneralizedNewtypeDeriving
                , InstanceSigs
                , MultiParamTypeClasses
                , PolyKinds
                , ScopedTypeVariables
                , RankNTypes
                , StandaloneDeriving
                , TupleSections
                , TypeFamilies
                , TypeApplications
                , TypeOperators
                , UndecidableInstances
